--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
       <nav class="navbar">
         <ul class="navbar-lists">
           <li>
-            <a href="/webPortfolio.html" class="navbar-link home-link">Home</a>
+            <a href="/index.html" class="navbar-link home-link">Home</a>
           </li>
           <li>
             <a href="/about.html" class="navbar-link about-link">About</a>
