--- a/services.html
+++ b/services.html
@@ -1,77 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Me</title>
-    <link rel="stylesheet" href="css/webPortfolio.css" />
-    <link rel="icon" href="/images/favicon.ico">
-    <script defer src="script.js"></script>
-  </head>
-  <body>
-    <header class="header">
-      <img src="images/logo.png" alt="main-logo" class="logo" />
 
-      <nav class="navbar">
-        <ul class="navbar-lists">
-          <li>
-            <a href="/index.html" class="navbar-link home-link">Home</a>
-          </li>
-          <li>
-            <a href="/about.html" class="navbar-link about-link">About</a>
-          </li>
-          <li>
-            <a href="/projects.html" class="navbar-link project-link"
-              >Projects</a
-            >
-          </li>
-          <li><a href="/services.html" class="navbar-link service-link">Services</a></li>
-          <li>
-            <a href="/contact.html" class="navbar-link contact-link">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Services</title>
+  <link rel="stylesheet" href="css/webPortfolio.css" />
+  <link rel="icon" href="/images/favicon.ico">
+  <script defer src="script.js"></script>
+</head>
 
-     <!-- Contact Us section-->
-  <section class="section section-contact">
+<body>
+  <header class="header">
+    <img src="images/logo.png" alt="main-logo" class="logo" />
+
+    <nav class="navbar">
+      <ul class="navbar-lists">
+        <li>
+          <a href="/index.html" class="navbar-link home-link">Home</a>
+        </li>
+        <li>
+          <a href="/about.html" class="navbar-link about-link">About</a>
+        </li>
+        <li>
+          <a href="/projects.html" class="navbar-link project-link">Projects</a>
+        </li>
+        <li><a href="/services.html" class="navbar-link service-link">Services</a></li>
+        <li>
+          <a href="/contact.html" class="navbar-link contact-link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="section section-services">
     <div class="container">
-      <h2 class="common-head">Contact Us</h2>
+      <h2 class="common-head">Service Offers</h2>
     </div>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.539390168015!2d72.83644715173429!3d19.01058157161222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cee936e31fd9%3A0xaa372ee86439139f!2sNaman%20Midtown!5e0!3m2!1sen!2sin!4v1697450295646!5m2!1sen!2sin"
-      width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    <div class="section-contact-main contact-container">
-      <form action="https://formspree.io/f/mqkrbrjy" method="POST">
-        <div class="grid grid-two-column">
-          <div>
-            <label for="username"></label>
-            <input type="text" name="username" autocomplete="off" placeholder="Name" id="username" required />
-          </div>
-          <div>
-            <label for="email"></label>
-            <input type="email" name="email" placeholder="Email" id="email" autocomplete="off" required />
-          </div>
-        </div>
-        <div>
-          <label for="subject"></label>
-          <input type="text" name="subject" autocomplete="off" minlength="10" placeholder="Subject" id="subject" required />
-        </div>
-        <div>
-          <label for="textarea"></label>
-          <textarea placeholder="Message" name="textarea" minlength="10" autocomplete="off" id="textarea" cols="30" rows="10" required></textarea>
-        </div>
-        <div>
-          <input type="submit" name="submit" id="submit" class="btn" value="Send Message" />
-        </div>
-      </form>
-    </div>
+    <div class="container grid grid-two-column">
+      <div class="service-box">
+        <ion-icon class="service-icon" name="desktop-outline"></ion-icon>
+        <h3>web Design</h3>
+        <p id="text">
+          “Elevate your online presence with our bespoke web design solutions. 
+          We combine creativity and strategic thinking to craft visually stunning interfaces that 
+          resonate with users and reflect your brand identity.”
+        </p>
+      </div>
+
+      <div class="service-box">
+        <ion-icon class="service-icon" name="desktop-outline"></ion-icon>
+        <h3>web development</h3>
+        <p id="text">
+          “I specialize in web development services. I create custom solutions that fit 
+          your needs. I make sure the websites. I build are easy to use and secure. From
+          making them look good on all devices to adding cool features,I've got it covered.
+          Let's work together to bring your ideas to life and make your
+          online presence awesome!”
+        </p>
+      </div>
   </section>
 
 
- <footer class="section section-footer footer">
+  <footer class="section section-footer footer">
     <div class="container grid grid-four-column">
       <div class="f-about">
         <h3>About</h3>
@@ -173,15 +165,11 @@
       </div>
     </div>
   </footer>
-    <!-- Javascript modules Section-->
 
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-  </body>
+  <!-- Javascript modules Section-->
+
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+
 </html>
