--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
           </li>
         </ul>
       </nav>
+      
     </header>
 
     <section>
@@ -140,7 +141,7 @@
         </div>
         <!--end-->
         <div class="f-address">
-          <h3>Have a Questions?</h3>
+          <h3>Any Questions?</h3>
           <address>
             <ul>
               <li>
