--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="about-data-btn">
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1hN2N_m-Hw3glCU5JgTV8eAiImeCbRKdt/view?usp=drive_link" target="_blank" class="btn">Download CV</a>
           </div>
         </div>
       </div>
@@ -137,25 +137,25 @@
       <div class="img-overlay p-btn--1">
         <img src="images/projects_img/project_1.png" loading="lazy" alt="project_1" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 1 </a>
+          <a href="https://github.com/Saikirankasturi/Web-PortFolio-Saikiran" target="_blank" class="common-head"> Project 1 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--3">
         <img src="images/projects_img/project_2.png" loading="lazy" alt="project_2" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 2 </a>
+          <a href="https://github.com/Saikirankasturi/Expense_and_Income" target="_blank" class="common-head"> Project 2 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--2">
         <img src="images/projects_img/project_3.png" loading="lazy" alt="project_3" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 3 </a>
+          <a href="https://github.com/Saikirankasturi/Exam-Portal" target="_blank" class="common-head"> Project 3 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--3">
         <img src="images/projects_img/coming-soon.png" loading="lazy" alt="project_4" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 4 </a>
+          <a href="#" target="_blank" class="common-head"> Project 4 </a>
         </div>
       </div>
     </div>
