--- a/services.html
+++ b/services.html
@@ -31,6 +31,7 @@
         </li>
       </ul>
     </nav>
+    
   </header>
 
   <section class="section section-services">
@@ -98,7 +99,7 @@
       </div>
 
       <div class="f-services">
-        <h3>Services</h3>
+        <h3>My Services</h3>
         <ul>
           <li>
             <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/services.html">Web design</a>
@@ -110,7 +111,7 @@
       </div>
       <!--end-->
       <div class="f-address">
-        <h3>Have a Questions?</h3>
+        <h3>Any Questions?</h3>
         <address>
           <ul>
             <li>
