--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,7 @@
         </li>
       </ul>
     </nav>
+    
   </header>
   <section class="section section-portfolio" id="portfolio-section">
     <div class="container">
@@ -118,7 +119,7 @@
       </div>
       <!--end-->
       <div class="f-address">
-        <h3>Have a Questions?</h3>
+        <h3>Any Questions?</h3>
         <address>
           <ul>
             <li>
