--- a/projects.html
+++ b/projects.html
@@ -48,11 +48,11 @@
       <div class="img-overlay p-btn--1">
         <img src="images/projects_img/project_1.png" loading="lazy" alt="project_1" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 1 </a>
+          <a href="https://github.com/Saikirankasturi/Web-PortFolio-Saikiran" target="_blank" class="common-head"> Project 1 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--3">
-        <img src="images/projects_img/project_2.png" loading="lazy" alt="project_2" />
+        <img src="https://github.com/Saikirankasturi/Expense_and_Income" loading="lazy" alt="project_2" />
         <div class="overlay">
           <a href="" target="_blank" class="common-head"> Project 2 </a>
         </div>
@@ -60,7 +60,7 @@
       <div class="img-overlay p-btn--2">
         <img src="images/projects_img/project_3.png" loading="lazy" alt="project_3" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 3 </a>
+          <a href="https://github.com/Saikirankasturi/Exam-Portal" target="_blank" class="common-head"> Project 3 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--3">
