--- a/projects.html
+++ b/projects.html
@@ -52,9 +52,9 @@
         </div>
       </div>
       <div class="img-overlay p-btn--3">
-        <img src="https://github.com/Saikirankasturi/Expense_and_Income" loading="lazy" alt="project_2" />
+        <img src="images/projects_img/project_2.png" loading="lazy" alt="project_2" />
         <div class="overlay">
-          <a href="" target="_blank" class="common-head"> Project 2 </a>
+          <a href="https://github.com/Saikirankasturi/Expense_and_Income" target="_blank" class="common-head"> Project 2 </a>
         </div>
       </div>
       <div class="img-overlay p-btn--2">
