--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="img-overlay p-btn--3">
         <img src="images/projects_img/coming-soon.png" loading="lazy" alt="project_4" />
         <div class="overlay">
-          <a href="#" target="_blank" class="common-head"> Project 4 </a>
+          <a href="" target="_blank" class="common-head"> Project 4 </a>
         </div>
       </div>
     </div>
@@ -270,10 +270,8 @@
         <h3>About</h3>
         <p>
           I am Saikiran Kasturi, a graduate of Shah and Anchor Kutchhi
-          Engineering College with a focus on Electronics and
-          Telecommunications Engineering.Proficient in HTML, CSS, JavaScript, SQL, 
-          Angular, Python, and Django.
-          
+          Engineering College.Proficient in HTML, CSS, JavaScript, SQL, 
+          Angular, Python, and Django.     
         </p>
       </div>
       <div class="f-links">
@@ -311,7 +309,7 @@
       </div>
       <!--end-->
       <div class="f-address">
-        <h3>Have a Questions?</h3>
+        <h3>Any Questions?</h3>
         <address>
           <ul>
             <li>
