--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             >
           </li>
           <li>
-            <a href="/contact.html" class="navbar-link contact-link">Contact</a>
+            <a href="/contact.html" class="navbar-link contact-link">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -101,7 +101,7 @@
           <p>
             I am Saikiran Kasturi, a graduate of Shah and Anchor Kutchhi
             Engineering College with a focus on Electronics and
-            Telecommunications Engineering.Proficient in HTML, CSS, JavaScript, SQL, 
+            Telecommunications Engineering. Proficient in HTML, CSS, JavaScript, SQL, 
             Angular, Python, and Django.
             
           </p>
@@ -122,7 +122,7 @@
               <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/services.html">Services</a>
             </li>
             <li>
-              <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Contact Us</a>
+              <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Get in Touch</a>
             </li>
             
           </ul>
