--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Me</title>
+    <title>Get in Touch</title>
     <link rel="stylesheet" href="css/webPortfolio.css" />
     <link rel="icon" href="/images/favicon.ico">
     <script defer src="script.js"></script>
@@ -27,7 +27,7 @@
           </li>
           <li><a href="/services.html" class="navbar-link service-link">Services</a></li>
           <li>
-            <a href="/contact.html" class="navbar-link contact-link">Contact</a>
+            <a href="/contact.html" class="navbar-link contact-link">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -37,7 +37,7 @@
      <!-- Contact Us section-->
   <section class="section section-contact">
     <div class="container">
-      <h2 class="common-head">Contact Us</h2>
+      <h2 class="common-head">Get in Touch</h2>
     </div>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2422.539390168015!2d72.83644715173429!3d19.01058157161222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cee936e31fd9%3A0xaa372ee86439139f!2sNaman%20Midtown!5e0!3m2!1sen!2sin!4v1697450295646!5m2!1sen!2sin"
@@ -79,9 +79,8 @@
         <p>
           I am Saikiran Kasturi, a graduate of Shah and Anchor Kutchhi
           Engineering College with a focus on Electronics and
-          Telecommunications Engineering.Proficient in HTML, CSS, JavaScript, SQL, 
+          Telecommunications Engineering. Proficient in HTML, CSS, JavaScript, SQL, 
           Angular, Python, and Django.
-          
         </p>
       </div>
       <div class="f-links">
@@ -100,7 +99,7 @@
             <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/services.html">Services</a>
           </li>
           <li>
-            <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Contact Us</a>
+            <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Get in Touch</a>
           </li>
           
         </ul>
