--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         </li>
         <li><a href="/services.html" class="navbar-link service-link">Services</a></li>
         <li>
-          <a href="/contact.html" class="navbar-link contact-link">Contact</a>
+          <a href="/contact.html" class="navbar-link contact-link">Contact Me</a>
         </li>
       </ul>
     </nav>
@@ -78,10 +78,8 @@
         <h3>About</h3>
         <p>
           I am Saikiran Kasturi, a graduate of Shah and Anchor Kutchhi
-          Engineering College with a focus on Electronics and
-          Telecommunications Engineering.Proficient in HTML, CSS, JavaScript, SQL, 
-          Angular, Python, and Django.
-          
+          Engineering College. Proficient in HTML, CSS, JavaScript, SQL, 
+          Angular, Python, and Django.     
         </p>
       </div>
       <div class="f-links">
@@ -100,7 +98,7 @@
             <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/services.html">Services</a>
           </li>
           <li>
-            <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Contact Us</a>
+            <span><ion-icon name="arrow-forward-circle-outline"></ion-icon></span><a href="/contact.html">Get in Touch</a>
           </li>
           
         </ul>
